--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev:frontend": "cd frontend && npm run dev",
     "dev:backend": "cd backend && npm run dev",
     "build": "cd frontend && npm run build",
+    "build:backend": "cd backend && npm run build",
     "start": "cd backend && npm start",
     "test": "npm run test:frontend && npm run test:backend",
     "test:frontend": "cd frontend && npm test",
