--- a/vercel.json
+++ b/vercel.json
@@ -7,10 +7,6 @@
       "config": {
         "distDir": "dist"
       }
-    },
-    {
-      "src": "backend/src/index.ts",
-      "use": "@vercel/node"
     }
   ],
   "routes": [
@@ -27,5 +23,8 @@
     "backend/src/index.ts": {
       "maxDuration": 30
     }
+  },
+  "env": {
+    "NODE_ENV": "production"
   }
 }
