--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "vercel": {
     "buildCommand": "npm run build",
     "outputDirectory": "dist",
-    "installCommand": "npm install"
+    "installCommand": "npm install --production=false"
   },
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
@@ -28,11 +28,18 @@
     "@reduxjs/toolkit": "^2.9.0",
     "@types/node": "^24.3.1",
     "@types/react-router-dom": "^5.3.3",
+    "@vitejs/plugin-react": "^5.0.0",
+    "autoprefixer": "^10.4.21",
     "axios": "^1.11.0",
+    "postcss": "^8.5.6",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-redux": "^9.2.0",
-    "react-router-dom": "^7.8.2"
+    "react-router-dom": "^7.8.2",
+    "tailwindcss": "^4.1.13",
+    "terser": "^5.44.0",
+    "typescript": "~5.8.3",
+    "vite": "^7.1.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
@@ -41,19 +48,12 @@
     "@testing-library/user-event": "^14.6.1",
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
-    "@vitejs/plugin-react": "^5.0.0",
-    "autoprefixer": "^10.4.21",
     "eslint": "^9.33.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
     "jsdom": "^26.1.0",
-    "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.13",
-    "terser": "^5.44.0",
-    "typescript": "~5.8.3",
     "typescript-eslint": "^8.39.1",
-    "vite": "^7.1.2",
     "vitest": "^3.2.4"
   }
 }
