package.jsonとvercel.jsonにViteフレームワークを追加し、APIルートの設定を修正。vite.config.tsにベースURLを設定。

--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   "vercel": {
     "buildCommand": "npm run build",
     "outputDirectory": "dist",
-    "installCommand": "npm install --production=false"
+    "installCommand": "npm install --production=false",
+    "framework": "vite"
   },
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
