--- a/package.json
+++ b/package.json
@@ -30,8 +30,10 @@
     "@types/node": "^24.3.1",
     "@types/react-router-dom": "^5.3.3",
     "@vitejs/plugin-react": "^5.0.0",
+    "@vercel/node": "^3.0.0",
     "autoprefixer": "^10.4.21",
     "axios": "^1.11.0",
+    "pg": "^8.11.0",
     "postcss": "^8.5.6",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
