Vercel設定を整理し、distディレクトリを.vercelignoreに追加。package.jsonからViteフレームワークの設定を削除し、vercel.jsonにアセットのルーティングを追加。vite.config.tsにpublicDirを設定。

--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,5 @@
 {
   "version": 2,
-  "framework": "vite",
   "buildCommand": "npm run build",
   "outputDirectory": "dist",
   "installCommand": "npm install --production=false",
@@ -8,6 +7,14 @@
     {
       "src": "/api/(.*)",
       "dest": "/api/events.ts"
+    },
+    {
+      "src": "/assets/(.*)",
+      "dest": "/assets/$1"
+    },
+    {
+      "src": "/(.*\\.(js|css|png|jpg|jpeg|gif|svg|ico|woff|woff2|ttf|eot))",
+      "dest": "/$1"
     },
     {
       "src": "/(.*)",
