--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "dev:backend": "cd backend && npm run dev",
     "build:backend": "cd backend && npm run build",
     "start:backend": "cd backend && npm start",
-    "test:backend": "cd backend && npm test"
+    "test:backend": "cd backend && npm test",
+    "dev:local": "npm run dev:api & npm run dev",
+    "dev:api": "cd local-api && npm start"
   },
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
