新しいAPIエンドポイント「/api/fix-texts-table」を追加し、textsテーブルにimage_idカラムを追加する機能を実装しました。また、vercel.jsonに新しいエンドポイントのルーティングを追加しました。

--- a/vercel.json
+++ b/vercel.json
@@ -13,6 +13,10 @@
       "dest": "/api/migrate.ts"
     },
     {
+      "src": "/api/fix-texts-table",
+      "dest": "/api/fix-texts-table.ts"
+    },
+    {
       "src": "/api/(.*)",
       "dest": "/api/events.ts"
     },
