データベースのテーブル修正と新しいイベント表示コンポーネントの追加。テキストテーブルに画像リンクカラムを追加し、マイグレーションスクリプトを更新。イベント表示コンポーネントに画像とテキストを表示する機能を実装。

--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "powerproke-text-novel-editor",
   "version": "1.0.0",
   "description": "パワポケ風テキストノベルイベント作成アプリ",
-  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -24,7 +23,6 @@
     "@dnd-kit/utilities": "^3.2.2",
     "@reduxjs/toolkit": "^2.9.0",
     "@types/node": "^24.3.1",
-    "@types/react-router-dom": "^5.3.3",
     "@vercel/node": "^3.0.0",
     "@vitejs/plugin-react": "^5.0.0",
     "autoprefixer": "^10.4.21",
@@ -34,7 +32,8 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-redux": "^9.2.0",
-    "react-router-dom": "^7.8.2",
+    "react-router": "^7.10.1",
+    "react-router-dom": "^7.10.1",
     "tailwindcss": "^3.4.0",
     "terser": "^5.44.0",
     "typescript": "~5.8.3",
